--- a/index.html
+++ b/index.html
@@ -138,14 +138,24 @@
         </div>
       </nav>
       <div id="home" class="d-flex justify-content-center">
-        <img src="images/home-bg.png" alt="" />
+        <img class="w-100" src="images/home-bg.png" alt="" />
       </div>
     </header>
     <main>
-      <div class="container"></div>
+      <div class="container">
+        <h2>Акции</h2>
+      </div>
+      <section class="container home-container"></section>
+      <div class="container nova__head">
+        <h2>Новинки</h2>
+      </div>
+      <section class="container novelties"></section>
+      <div class="container nova__head">
+        <h2>Покупали раньше</h2>
+      </div>
+      <section class="container buy"></section>
     </main>
     <footer></footer>
-    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
