--- a/index.html
+++ b/index.html
@@ -16,55 +16,63 @@
     <header>
       <nav id="navbar">
         <div
-          class="container nav-container d-flex justify-content-between align-items-center"
+          class="container nav-container gap-5 d-flex justify-content-between align-items-center"
         >
           <div class="nav-logo w-auto">
             <a class="navbar-brand" href="index.html"
               ><img src="images/nav-logo.svg" alt=""
             /></a>
           </div>
-          <div
-            class="nav-middle w-75 d-flex align-items-center justify-content-center gap-4"
-          >
-            <div class="nav-catalog">
-              <button id="navbar_btn" class="d-flex align-items-center gap-2">
-                <i class="uil uil-bars"></i>
-                Каталог
-              </button>
-            </div>
-            <div class="nav-input w-50">
-              <form>
-                <input placeholder="Найти товар" type="text" />
-                <i class="uil uil-search"></i>
-              </form>
-            </div>
-          </div>
-          <div class="nav-right w-auto d-flex align-items-center gap-5">
-            <div class="nav__menus-icons d-flex gap-4">
-              <div class="nav__menu-icon d-flex flex-column align-items-center">
-                <i class="uil uil-heart"></i>
-                <p class="m-0">Избранное</p>
+          <div class="nav__scroll d-flex justify-content-between w-100">
+            <div
+              class="nav-middle w-100 d-flex align-items-center justify-content-center gap-4"
+            >
+              <div class="nav-catalog">
+                <button id="navbar_btn" class="d-flex align-items-center gap-2">
+                  <i class="uil uil-bars"></i>
+                  <p class="m-0">Каталог</p>
+                </button>
               </div>
-              <div class="nav__menu-icon d-flex flex-column align-items-center">
-                <i class="uil uil-box"></i>
-                <p class="m-0">Заказы</p>
-              </div>
-              <div class="nav__menu-icon d-flex flex-column align-items-center">
-                <i class="uil uil-shopping-cart"></i>
-                <p class="m-0">Корзина</p>
+              <div class="nav-input w-75">
+                <form>
+                  <input placeholder="Найти товар" type="text" />
+                  <i class="uil uil-search"></i>
+                </form>
               </div>
             </div>
-            <div class="nav-avatar d-flex align-items-center gap-3">
-              <img src="images/nav-avatar.svg" alt="" />
-              <p class="m-0">Алексей</p>
-              <button><i class="ps-3 uil uil-angle-down"></i></button>
+            <div class="nav-right d-flex align-items-center gap-5">
+              <div class="nav__menus-icons d-flex gap-4">
+                <div
+                  class="nav__menu-icon d-flex flex-column align-items-center"
+                >
+                  <i class="uil uil-heart"></i>
+                  <p class="m-0">Избранное</p>
+                </div>
+                <div
+                  class="nav__menu-icon d-flex flex-column align-items-center"
+                >
+                  <i class="uil uil-box"></i>
+                  <p class="m-0">Заказы</p>
+                </div>
+                <div
+                  class="nav__menu-icon d-flex flex-column align-items-center"
+                >
+                  <i class="uil uil-shopping-cart"></i>
+                  <p class="m-0">Корзина</p>
+                </div>
+              </div>
+              <div class="nav-avatar d-flex align-items-center gap-3">
+                <img src="images/nav-avatar.svg" alt="" />
+                <p class="m-0">Алексей</p>
+                <button><i class="ps-3 uil uil-angle-down"></i></button>
+              </div>
             </div>
           </div>
         </div>
         <div class="navbarr">
           <div class="navbar">
             <div id="navbarMenu" class="navbar-menus">
-              <ul class="navbar-nav d-flex m-0">
+              <ul class="navbar-nav m-0">
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
                     <a class="nav-link" href="index.html">Молоко, сыр, яйцо</a>
