--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <a class="navbar-brand" href="index.html"
               ><img src="images/nav-logo.svg" alt=""
             /></a>
+            <a class="navbar__res-logo" href="index.html"
+              ><img src="images/res-logo.svg" alt=""
+            /></a>
           </div>
           <div class="nav__scroll d-flex justify-content-between w-100">
             <div
@@ -162,6 +165,85 @@
         <h2>Покупали раньше</h2>
       </div>
       <section class="container buy"></section>
+      <div class="container nova__head">
+        <h2>Специальные предложения</h2>
+      </div>
+      <section class="container special"></section>
+      <div class="container nova__head">
+        <h2>Наши магазины</h2>
+      </div>
+      <section class="container shop">
+        <div class="shop__tabs">
+          <button class="shop_btn" id="shelyur" type="button" data-tab="#tab_1">
+            п.Щельяюр
+          </button>
+          <button class="shop_btn" id="vertep" type="button" data-tab="#tab_2">
+            д.Вертеп
+          </button>
+          <button
+            class="shop_btn"
+            id="krasnobor"
+            type="button"
+            data-tab="#tab_3"
+          >
+            с.Краснобор
+          </button>
+          <button class="shop_btn" id="diyur" type="button" data-tab="#tab_4">
+            д.Диюр
+          </button>
+        </div>
+        <div class="shop__items">
+          <iframe
+            class="map__item"
+            id="tab_1"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13326.249919276983!2d53.39601336727491!3d65.32264048499295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4472340bbf53f20d%3A0x6aaf90d406ef7886!2z0KnQtdC70YzRj9GO0YAsINCg0LXRgdC_LiDQmtC-0LzQuCwg0KDQvtGB0YHQuNGP!5e0!3m2!1sru!2s!4v1676225402129!5m2!1sru!2s"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <iframe
+            class="map__item"
+            id="tab_2"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13326.249919276983!2d53.39601336727491!3d65.32264048499295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x447249e2718cd461%3A0x25c0f625da4e30ed!2z0JLQtdGA0YLQtdC_LCDQoNC10YHQvy4g0JrQvtC80LgsINCg0L7RgdGB0LjRjywgMTY5NDcz!5e0!3m2!1sru!2s!4v1676225430754!5m2!1sru!2s"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <iframe
+            class="map__item"
+            id="tab_3"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6669.529990074628!2d53.186285151638714!3d65.29733194605693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x447235dd2ca590b3%3A0xc633232da326cfaf!2z0JrRgNCw0YHQvdC-0LHQvtGALCDQoNC10YHQvy4g0JrQvtC80LgsINCg0L7RgdGB0LjRjywgMTY5NDcz!5e0!3m2!1sru!2s!4v1676225454636!5m2!1sru!2s"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <iframe
+            class="map__item"
+            id="tab_4"
+            id="diy"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13341.641799037461!2d53.272392517190646!3d65.29223048406857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x447235aa69816fb7%3A0x7202220934f2d943!2z0JTQuNGO0YAsINCg0LXRgdC_LiDQmtC-0LzQuCwg0KDQvtGB0YHQuNGPLCAxNjk0NzE!5e0!3m2!1sru!2s!4v1676225475678!5m2!1sru!2s"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
+      <div class="container nova__head">
+        <h2>Статьи</h2>
+      </div>
+      <section class="container articles"></section>
     </main>
     <footer></footer>
     <script src="js/app.js"></script>
