--- a/index.html
+++ b/index.html
@@ -245,7 +245,160 @@
       </div>
       <section class="container articles"></section>
     </main>
-    <footer></footer>
+    <section class="bottom__fixed-menu">
+      <div class="container">
+        <div class="bottom__fixed-btns d-flex align-items-center">
+          <button
+            id="footer__btn"
+            class="d-flex flex-column align-items-center"
+          >
+            <img src="images/bottom-menu.svg" alt="" />
+            Каталог
+          </button>
+          <button class="d-flex flex-column align-items-center">
+            <img src="images/bottom-heart.svg" alt="" />
+            Избранное
+          </button>
+          <button class="d-flex flex-column align-items-center">
+            <img src="images/bottom-box.svg" alt="" />
+            Заказы
+          </button>
+          <button class="d-flex flex-column align-items-center">
+            <img src="images/bottom-cart.svg" alt="" />
+            Корзина
+          </button>
+          <img src="images/bottom-logo.svg" alt="" />
+        </div>
+      </div>
+      <div class="container">
+        <div class="footer__fixed">
+          <div class="footerr">
+            <div id="footerMenu" class="footer__fixed-menus">
+              <ul class="footer-nav m-0">
+                <div class="footer__item-menus">
+                  <li class="nav-item custom_item-btn">
+                    <a class="nav-link" href="index.html">Молоко, сыр, яйцо</a>
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="service.html"
+                      >Хлеб</a
+                    >
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="career.html"
+                      >Фрукты и овощи</a
+                    >
+                  </li>
+                  <li class="nav-item custom_item-btn">
+                    <a class="nav-link" href="index.html"
+                      >Замороженные продукты</a
+                    >
+                  </li>
+                </div>
+                <div class="nav__item-menus">
+                  <li class="nav-item custom_item-btn">
+                    <a class="nav-link" href="index.html">Напитки</a>
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="service.html"
+                      >Кондитерские изделия</a
+                    >
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="career.html"
+                      >Чай, кофе</a
+                    >
+                  </li>
+                </div>
+                <div class="nav__item-menus">
+                  <li class="nav-item custom_item-btn">
+                    <a class="nav-link" href="index.html">Бакалея</a>
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="service.html"
+                      >Здоровое питание</a
+                    >
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="career.html"
+                      >Зоотовары</a
+                    >
+                  </li>
+                </div>
+                <div class="nav__item-menus">
+                  <li class="nav-item custom_item-btn">
+                    <a class="nav-link" href="index.html"
+                      >Непродовольственные товары</a
+                    >
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="service.html"
+                      >Детское питание</a
+                    >
+                  </li>
+                  <li class="nav-item custom-item">
+                    <a class="nav-link custom-navlink" href="career.html"
+                      >Мясо, птица, колбаса</a
+                    >
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer">
+        <div
+          class="container d-flex flex-column flex-sm-row gap-4 justify-content-between align-items-center"
+        >
+          <div
+            class="footer-logo d-flex align-items-center align-items-sm-start gap-4 gap-sm-4 align-items-lg-center flex-column flex-md-row"
+          >
+            <img src="images/footer-logo.svg" alt="" />
+            <div class="footer-links">
+              <ul class="footer__links ps-0 mb-0">
+                <ul class="ps-0 d-flex gap-5">
+                  <li><a href="#">О компании</a></li>
+                  <li><a href="#">Контакты</a></li>
+                  <li><a href="#">Вакансии</a></li>
+                </ul>
+                <ul class="ps-0 d-flex gap-5">
+                  <li><a href="#">Статьи</a></li>
+                  <li>
+                    <a href="#">Политика обработки персональных данных</a>
+                  </li>
+                </ul>
+              </ul>
+            </div>
+          </div>
+          <div
+            class="footer__call-center d-flex gap-1 gap-sm-5 align-items-center"
+          >
+            <div class="footer-icons ms-3">
+              <img src="images/instagram.svg" alt="" />
+              <img src="images/vkontakte.svg" alt="" />
+              <img src="images/facebook.svg" alt="" />
+              <img src="images/ok.svg" alt="" />
+            </div>
+            <div class="footer__call">
+              <a
+                class="mt-0 mt-xl-4 d-flex align-items-center gap-2"
+                href="tel: +8 800 777 33 33"
+                ><img src="images/phone.svg" alt="" />8 800 777 33 33</a
+              >
+              <div
+                class="container footer__bottom-logo d-flex align-items-center justify-content-end mt-2 ps-0 gap-2"
+              >
+                <p class="m-0">Дизайн</p>
+                <img src="images/footer-log1.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/app.js"></script>
   </body>
 </html>
