--- a/catalog.html
+++ b/catalog.html
@@ -210,7 +210,9 @@
               <ul class="footer-nav m-0">
                 <div class="footer__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html">Молоко, сыр, яйцо</a>
+                    <a class="nav-link" href="catalog.html"
+                      >Молоко, сыр, яйцо</a
+                    >
                   </li>
                   <li class="nav-item custom-item">
                     <a class="nav-link custom-navlink" href="catalog.html"
@@ -223,14 +225,14 @@
                     >
                   </li>
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html"
+                    <a class="nav-link" href="catalog.html"
                       >Замороженные продукты</a
                     >
                   </li>
                 </div>
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html">Напитки</a>
+                    <a class="nav-link" href="catalog.html">Напитки</a>
                   </li>
                   <li class="nav-item custom-item">
                     <a class="nav-link custom-navlink" href="catalog.html"
@@ -245,7 +247,7 @@
                 </div>
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html">Бакалея</a>
+                    <a class="nav-link" href="catalog.html">Бакалея</a>
                   </li>
                   <li class="nav-item custom-item">
                     <a class="nav-link custom-navlink" href="catalog.html"
@@ -260,7 +262,7 @@
                 </div>
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html"
+                    <a class="nav-link" href="catalog.html"
                       >Непродовольственные товары</a
                     >
                   </li>
