--- a/index.html
+++ b/index.html
@@ -286,67 +286,69 @@
               <ul class="footer-nav m-0">
                 <div class="footer__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html">Молоко, сыр, яйцо</a>
+                    <a class="nav-link" href="catalog.html"
+                      >Молоко, сыр, яйцо</a
+                    >
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="service.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Хлеб</a
                     >
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="career.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Фрукты и овощи</a
                     >
                   </li>
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html"
+                    <a class="nav-link" href="catalog.html"
                       >Замороженные продукты</a
                     >
                   </li>
                 </div>
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html">Напитки</a>
+                    <a class="nav-link" href="catalog.html">Напитки</a>
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="service.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Кондитерские изделия</a
                     >
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="career.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Чай, кофе</a
                     >
                   </li>
                 </div>
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html">Бакалея</a>
+                    <a class="nav-link" href="catalog.html">Бакалея</a>
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="service.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Здоровое питание</a
                     >
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="career.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Зоотовары</a
                     >
                   </li>
                 </div>
                 <div class="nav__item-menus">
                   <li class="nav-item custom_item-btn">
-                    <a class="nav-link" href="index.html"
+                    <a class="nav-link" href="catalog.html"
                       >Непродовольственные товары</a
                     >
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="service.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Детское питание</a
                     >
                   </li>
                   <li class="nav-item custom-item">
-                    <a class="nav-link custom-navlink" href="career.html"
+                    <a class="nav-link custom-navlink" href="catalog.html"
                       >Мясо, птица, колбаса</a
                     >
                   </li>
