--- a/catalog.html
+++ b/catalog.html
@@ -167,6 +167,10 @@
           <a href="index.html"><span class="m-0">Главная</span></a>
           <span><img src="images/right-arrow.svg" alt="" /></span>
           <a href="catalog.html"><p class="m-0">Каталог</p></a>
+          <span><img src="images/right-arrow.svg" alt="" /></span>
+          <a href="result-search.html"
+            ><span class="m-0">Результат Поиска</span></a
+          >
         </div>
       </div>
       <div class="container catalog-head">
