--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
                   <div
                     class="nav__menu-icon d-flex flex-column align-items-center"
                   >
-                    <i class="uil uil-shopping-cart"></i>
+                    <button>
+                      <i class="uil uil-shopping-cart"
+                        ><span class="nav-badge">0</span></i
+                      >
+                    </button>
                     <p class="m-0">Корзина</p>
                   </div>
                 </div>
@@ -301,7 +305,9 @@
             <img src="images/bottom-cart.svg" alt="" />
             Корзина
           </button>
-          <img src="images/bottom-logo.svg" alt="" />
+          <button id="popup_bottom-menu">
+            <img src="images/nav-avatar.svg" alt="" />
+          </button>
         </div>
       </div>
       <div class="container">
