--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
             <img src="images/bottom-cart.svg" alt="" />
             Корзина
           </button>
-          <img src="images/bottom-logo.svg" alt="" />
+          <button id="popup_bottom-menu">
+            <img src="images/nav-avatar.svg" alt="" />
+          </button>
         </div>
       </div>
       <div class="container">
