--- a/basket.html
+++ b/basket.html
@@ -10,12 +10,12 @@
 			rel="stylesheet"
 			href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
 		/>
-		<title>Catalog</title>
+		<title>Cart</title>
 	</head>
 	<body>
 		<header>
 			<nav id="navbar">
-				<div class="container">
+				<div class="container navv">
 					<div
 						class="nav-container gap-5 d-flex justify-content-between align-items-center"
 					>
@@ -52,14 +52,11 @@
 										<i class="uil uil-heart"></i>
 										<p class="m-0">Избранное</p>
 									</div>
-									<div class="nav__menu-icon">
-										<a
-											href="result-search.html"
-											class="d-flex flex-column align-items-center"
-										>
-											<i class="uil uil-box"> </i>
-											<p class="m-0">Продукты</p>
-										</a>
+									<div
+										class="nav__menu-icon d-flex flex-column align-items-center"
+									>
+										<i class="uil uil-box"></i>
+										<p class="m-0">Заказы</p>
 									</div>
 									<div
 										class="nav__menu-icon d-flex flex-column align-items-center"
@@ -73,9 +70,13 @@
 									</div>
 								</div>
 								<div class="nav-avatar d-flex align-items-center gap-3">
-									<img src="images/nav-avatar.svg" alt="" />
-									<p class="m-0">Алексей</p>
-									<button><i class="ps-3 uil uil-angle-down"></i></button>
+									<button id="popup-menu">
+										<img src="images/nav-avatar.svg" alt="" />
+										<p class="m-0">Алексей</p>
+									</button>
+									<button>
+										<i class="ps-3 uil uil-angle-down"></i>
+									</button>
 								</div>
 							</div>
 						</div>
@@ -161,27 +162,50 @@
 					</div>
 				</div>
 			</nav>
-			<div id="home" class="d-flex justify-content-center">
-				<img class="w-100" src="images/home-bg.png" alt="" />
-			</div>
 		</header>
-		<main>
+		<section id="cart">
 			<div class="container">
 				<div class="page-links d-flex gap-3 align-items-center">
 					<a href="index.html"><span class="m-0">Главная</span></a>
 					<span><img src="images/right-arrow.svg" alt="" /></span>
-					<a href="catalog.html"><p class="m-0">Каталог</p></a>
+					<a href="catalog.html"><p class="m-0">Корзина</p></a>
 				</div>
 			</div>
 			<div class="container catalog-head">
-				<h2>Каталог</h2>
+				<h2>Корзина</h2>
 			</div>
-			<section>
-				<div class="container">
-					<div class="catalog-products w-100"></div>
+			<div class="container cart">
+				<div class="cart-left">
+					<div class="cart-rows"></div>
 				</div>
-			</section>
-		</main>
+				<div class="cart-right">
+					<div class="cart_right-switch">
+						<button><span></span></button>
+						<p>Списать 200 ₽</p>
+					</div>
+					<p class="cart_right-text">На карте накоплено 200 ₽</p>
+					<div class="cart_right-product d-flex">
+						<div class="right_product-right">
+							<p>3 товара</p>
+							<p class="m-0">Скидка</p>
+						</div>
+						<div class="right_product-left">
+							<p>258,10 ₽</p>
+							<span>-8,01 ₽ </span>
+						</div>
+					</div>
+					<div class="cart_right-total d-flex justify-content-between">
+						<p>Итог</p>
+						<span>250,09 ₽ </span>
+					</div>
+					<div class="cart_right-bonus d-flex align-items-center">
+						<img src="images/bonus-img.svg" alt="" />
+						<p class="m-0">Вы получяете 100 бонусов</p>
+					</div>
+					<button id="checkout">Оформить заказ</button>
+				</div>
+			</div>
+		</section>
 		<section class="bottom__fixed-menu">
 			<div class="container">
 				<div class="bottom__fixed-btns d-flex align-items-center">
@@ -204,7 +228,9 @@
 						<img src="images/bottom-cart.svg" alt="" />
 						Корзина
 					</button>
-					<img src="images/bottom-logo.svg" alt="" />
+					<button id="popup_bottom-menu">
+						<img src="images/nav-avatar.svg" alt="" />
+					</button>
 				</div>
 			</div>
 			<div class="container">
@@ -339,7 +365,8 @@
 			</div>
 		</footer>
 		<script src="js/nav.js"></script>
-		<script src="js/cards.js"></script>
+		<script src="js/common.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/cart.js"></script>
 	</body>
 </html>
