--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									>
 										<a href="basket.html" type="button">
 											<i class="uil uil-shopping-cart">
-												<span class="cart nav-badge"></span>
+												<span class="cart nav-badge">0</span>
 											</i>
 										</a>
 										<p class="m-0">Корзина</p>
