--- a/milk.html
+++ b/milk.html
@@ -61,11 +61,11 @@
 									<div
 										class="nav__menu-icon d-flex flex-column align-items-center"
 									>
-										<button>
-											<i class="uil uil-shopping-cart"
-												><span class="nav-badge">0</span></i
-											>
-										</button>
+										<a href="basket.html" type="button">
+											<i class="uil uil-shopping-cart">
+												<span class="cart nav-badge"></span>
+											</i>
+										</a>
 										<p class="m-0">Корзина</p>
 									</div>
 								</div>
