--- a/basket.html
+++ b/basket.html
@@ -67,7 +67,7 @@
 											</i>
 										</a>
 										<p class="m-0">Корзина</p>
-									</div>	
+									</div>
 								</div>
 								<div class="nav-avatar d-flex align-items-center gap-3">
 									<button id="popup-menu">
@@ -162,6 +162,27 @@
 					</div>
 				</div>
 			</nav>
+			<div class="popup">
+				<div class="container">
+					<div class="popup-container">
+						<div class="popup-menu">
+							<button id="popup-close">
+								<i class="uil uil-multiply"></i>
+							</button>
+							<h3>Вход</h3>
+							<form>
+								<p>Телефон</p>
+								<input type="text" />
+							</form>
+							<button type="submit">Вход</button>
+							<div class="popup-registr">
+								<button id="registr">Регистрация</button>
+								<a href="#">Забыли пароль?</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</header>
 		<section id="cart">
 			<div class="container">
