--- a/milk.html
+++ b/milk.html
@@ -69,15 +69,14 @@
 										<p class="m-0">Корзина</p>
 									</div>
 								</div>
-								<div
-									class="nav__menu-icon d-flex flex-column align-items-center"
-								>
-									<a href="basket.html" type="button">
-										<i class="uil uil-shopping-cart">
-											<span class="cart nav-badge"></span>
-										</i>
-									</a>
-									<p class="m-0">Корзина</p>
+								<div class="nav-avatar d-flex align-items-center gap-3">
+									<button id="popup-menu">
+										<img src="images/nav-avatar.svg" alt="" />
+										<p class="m-0">Алексей</p>
+									</button>
+									<button>
+										<i class="ps-3 uil uil-angle-down"></i>
+									</button>
 								</div>
 							</div>
 						</div>
@@ -163,6 +162,27 @@
 					</div>
 				</div>
 			</nav>
+			<div class="popup">
+				<div class="container">
+					<div class="popup-container">
+						<div class="popup-menu">
+							<button id="popup-close">
+								<i class="uil uil-multiply"></i>
+							</button>
+							<h3>Вход</h3>
+							<form>
+								<p>Телефон</p>
+								<input type="text" />
+							</form>
+							<button type="submit">Вход</button>
+							<div class="popup-registr">
+								<button id="registr">Регистрация</button>
+								<a href="#">Забыли пароль?</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</header>
 		<main id="margin_top">
 			<section>
