--- a/result-search.html
+++ b/result-search.html
@@ -53,7 +53,9 @@
 									<div
 										class="nav__menu-icon d-flex flex-column align-items-center"
 									>
-										<i class="uil uil-heart"></i>
+										<a href="favorite.html">
+											<i class="uil uil-heart"></i>
+										</a>
 										<p class="m-0">Избранное</p>
 									</div>
 									<div class="nav__menu-icon">
@@ -364,9 +366,9 @@
 				</div>
 			</div>
 		</footer>
-		<script src="js/nav.js"></script>
 		<script src="js/search_cards.js"></script>
 		<script src="js/common.js"></script>
+		<script src="js/nav.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
