--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,9 @@
 									<div
 										class="nav__menu-icon d-flex flex-column align-items-center"
 									>
-										<i class="uil uil-heart"></i>
+										<a href="favorite.html">
+											<i class="uil uil-heart"></i>
+										</a>
 										<p class="m-0">Избранное</p>
 									</div>
 									<div class="nav__menu-icon">
