--- a/favorite.html
+++ b/favorite.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Catalaog Product</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
 		<link
 			rel="stylesheet"
 			href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
 		/>
+		<title>Fvorites</title>
 	</head>
 	<body>
 		<header>
@@ -196,22 +196,15 @@
 					</div>
 				</div>
 				<div class="container catalog-head">
-					<h2>Молоко, сыр, яйцо</h2>
-				</div>
-				<div class="container">
-					<div id="products" class="d-flex gap-4">
-						<h5>Товары нашего производства</h5>
-						<h5>Полезное производства</h5>
-						<h5>Без ГМО</h5>
-					</div>
+					<h2>Избранное</h2>
 				</div>
 			</section>
 			<section>
 				<div class="container">
-					<div class="milk-category d-flex flex-column flex-md-row">
-						<div class="milk-filter w-25">
+					<div class="favorite-category d-flex flex-column flex-md-row">
+						<div class="favorite-filter w-25">
 							<h4>Фильтр</h4>
-							<div class="milk_filter-price">
+							<div class="favorite_filter-price">
 								<div
 									class="filter_inputs-head d-flex justify-content-between align-items-center"
 								>
@@ -228,13 +221,13 @@
 										<input type="range" />
 									</form>
 								</div>
-								<div class="milk_filter-type">
+								<div class="favorite_filter-type">
 									<p>Молоко</p>
 									<p>Сливки</p>
 									<p>Яйцо</p>
 								</div>
 							</div>
-							<div class="milk_filter-in-stock">
+							<div class="favorite_filter-in-stock">
 								<button id="check">
 									<span></span>
 								</button>
@@ -242,33 +235,133 @@
 							</div>
 							<button id="apply">Применить</button>
 						</div>
-						<div class="milk-right w-75">
-							<div class="milk_products-btn d-flex">
+						<div class="favorite-right w-75">
+							<div class="favorite_products-btn d-flex">
 								<button
 									class="d-flex align-items-center justify-content-between gap-2"
 								>
-									Фильтр 4 <i class="uil uil-times"></i>
+									Цена от 99 до 2599<i class="uil uil-times"></i>
 								</button>
 								<button
 									class="d-flex align-items-center justify-content-between gap-2"
 								>
-									Цена от 99 до 2599 <i class="uil uil-times"></i>
-								</button>
-								<button
-									class="d-flex align-items-center justify-content-between gap-2"
-								>
-									Очистить фильтры <i class="uil uil-times"></i>
+									Очистить <i class="uil uil-times"></i>
 								</button>
 							</div>
-							<div class="milk-products"></div>
+							<div class="favorite-products"></div>
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
-		<script src="js/nav.js"></script>
-		<script src="js/cards.js"></script>
-		<script src="js/category-card.js"></script>
+		<section class="bottom__fixed-menu">
+			<div class="container">
+				<div class="bottom__fixed-btns d-flex align-items-center">
+					<button
+						id="footer__btn"
+						class="d-flex flex-column align-items-center"
+					>
+						<img src="images/bottom-menu.svg" alt="" />
+						Каталог
+					</button>
+					<button class="d-flex flex-column align-items-center">
+						<img src="images/bottom-heart.svg" alt="" />
+						Избранное
+					</button>
+					<button class="d-flex flex-column align-items-center">
+						<img src="images/bottom-box.svg" alt="" />
+						Заказы
+					</button>
+					<button class="d-flex flex-column align-items-center">
+						<img src="images/bottom-cart.svg" alt="" />
+						Корзина
+					</button>
+					<img src="images/bottom-logo.svg" alt="" />
+				</div>
+			</div>
+			<div class="container">
+				<div class="footer__fixed">
+					<div class="footerr">
+						<div id="footerMenu" class="footer__fixed-menus">
+							<ul class="footer-nav m-0">
+								<div class="footer__item-menus">
+									<li class="nav-item custom_item-btn">
+										<a class="nav-link" href="catalog.html"
+											>Молоко, сыр, яйцо</a
+										>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Хлеб</a
+										>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Фрукты и овощи</a
+										>
+									</li>
+									<li class="nav-item custom_item-btn">
+										<a class="nav-link" href="catalog.html"
+											>Замороженные продукты</a
+										>
+									</li>
+								</div>
+								<div class="nav__item-menus">
+									<li class="nav-item custom_item-btn">
+										<a class="nav-link" href="catalog.html">Напитки</a>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Кондитерские изделия</a
+										>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Чай, кофе</a
+										>
+									</li>
+								</div>
+								<div class="nav__item-menus">
+									<li class="nav-item custom_item-btn">
+										<a class="nav-link" href="catalog.html">Бакалея</a>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Здоровое питание</a
+										>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Зоотовары</a
+										>
+									</li>
+								</div>
+								<div class="nav__item-menus">
+									<li class="nav-item custom_item-btn">
+										<a class="nav-link" href="catalog.html"
+											>Непродовольственные товары</a
+										>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Детское питание</a
+										>
+									</li>
+									<li class="nav-item custom-item">
+										<a class="nav-link custom-navlink" href="catalog.html"
+											>Мясо, птица, колбаса</a
+										>
+									</li>
+								</div>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<script src="js/main.js"></script>
+		<script src="js/nav.js"></script>
+		<script src="js/common.js"></script>
+		<script src="js/favorite_card.js"></script>
 	</body>
 </html>
